--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "axios": "^1.7.9",
     "axios-mock-adapter": "^2.1.0",
     "bootstrap": "^5.3.3",
+    "jsdom": "^26.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "vitest": "^3.0.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
