--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
     "axios-mock-adapter": "^2.1.0",
-    "bootstrap": "^5.3.3",
     "jsdom": "^26.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.6",
     "vitest": "^3.0.5",
     "zustand": "^5.0.3"
   },
